# JenkinsPipelineCpp

./: .gitignore  CMakeLists.txt  Jenkinsfile  PipelineConfig.json  README.md
cpp/: CMakeLists.txt  main.cxx
src/: main.cxx
src/MathFunctions/: product.cxx  product.h
test/: CMakeLists.txt  product_test.cxx
test/MathFunctions/: CMakeLists.txt
vars/: startPipeline.groovy
